fix spacing on search bar and hide borders on selected nav elements

--- a/src/components/NavBarBot/NavBarBot.css
+++ b/src/components/NavBarBot/NavBarBot.css
@@ -7,3 +7,8 @@ nav.navbar.fixed-bottom.navbar-light.bg-light {
   background-color: #EEEEEE !important;
   border-top: 1px solid gray;
 }
+
+#nav-bar-bottom {
+  position: fixed;
+  bottom: 0;
+}
